--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -44,7 +44,21 @@ footer {
 }
 
 [class*='button'] {
+	border: 1px solid #e5e5e5;
+	padding: 10px;
+	width: 115px;
+	margin: auto;
+	font-size: 9px;
+	letter-spacing: 3px;
+	color: #111;
+	transition: 0.5s;
+	text-align: center;
 	cursor: pointer;
+}
+
+[class*='button']:hover {
+	color: #111;
+	border-color: #355c7d;
 }
 
 .row {
@@ -88,7 +102,7 @@ nav.title-bar {
 
 .content .progress-container {
 	height: 25%;
-	border-bottom: 1px solid #9e9e9e;
+	border-bottom: 1px solid #e5e5e5;
 	padding: 15px 20px;
 }
 
@@ -126,8 +140,8 @@ nav.title-bar {
 }
 
 [class*='circle'].complete {
-	background: #c5fcc2;
-	background: #79C879;
+	/*background: #c5fcc2;*/
+	background: #7ac142;
 }
 
 
@@ -173,17 +187,62 @@ nav.title-bar {
 	width: 100%;
 }
 
-.ajax .start-button {
-	border: 1px solid #e5e5e5;
-	padding: 10px 40px;
-	font-size: 9px;
-	letter-spacing: 3px;
-	color: #111;
-	transition: 0.5s;
-	text-align: center;
+.ajax-success {
+	display: none;
 }
 
-.ajax .start-button:hover {
-	color: #111;
-	border-color: #355c7d;
+
+/* 
+ * ANIMATED CHECKMARK	
+ * inspired by Alexander Haniotis 
+ * https://codepen.io/haniotis/pen/KwvYLO
+ */
+
+.checkmark__circle {
+  stroke-dasharray: 166;
+  stroke-dashoffset: 166;
+  stroke-width: 2;
+  stroke-miterlimit: 10;
+  stroke: #7ac142;
+  fill: none;
+  animation: stroke 0.6s cubic-bezier(0.65, 0, 0.45, 1) forwards;
+}
+
+.checkmark {
+  width: 56px;
+  height: 56px;
+  border-radius: 50%;
+  display: block;
+  stroke-width: 2;
+  stroke: #fff;
+  stroke-miterlimit: 10;
+  margin: 10% auto;
+  box-shadow: inset 0px 0px 0px #7ac142;
+  animation: fill .4s ease-in-out .4s forwards, scale .3s ease-in-out .9s both;
+}
+
+.checkmark__check {
+  transform-origin: 50% 50%;
+  stroke-dasharray: 48;
+  stroke-dashoffset: 48;
+  animation: stroke 0.3s cubic-bezier(0.65, 0, 0.45, 1) 0.8s forwards;
+}
+
+@keyframes stroke {
+  100% {
+    stroke-dashoffset: 0;
+  }
+}
+@keyframes scale {
+  0%, 100% {
+    transform: none;
+  }
+  50% {
+    transform: scale3d(1.1, 1.1, 1);
+  }
+}
+@keyframes fill {
+  100% {
+    box-shadow: inset 0px 0px 0px 30px #7ac142;
+  }
 }
