finished step 5 with no problems! application done

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -192,6 +192,11 @@ nav.title-bar {
 	display: none;
 }
 
+.success-statement {
+	margin-bottom: 25px;
+	letter-spacing: 2px
+}
+
 
 /* 
  * ANIMATED CHECKMARK	
